www/app/stylus/components/_chat.styl
.content-x-info {
    height: 100%;
}

.chat {
    height: 100%;
    position: relative;
    padding-left: 20px;
    box-sizing: border-box

    &:before {
        content: '';
        position: absolute;
        width: 100%;
        height: 50px;
        top: 0;
        left: 0;
        background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
        background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
        background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */    
    }

    input {
        position: fixed;
        width: 75%;
        font-size: 18px;
        padding: 10px 15px;
        bottom: 10px;
        left: 10px
        background: #333;
        border: 1px solid black;
        border-radius: 5px;
        color: white;

        &:focus {
            color: #333;
        }
    }

    button {
        right: 20px;
        width: 12%;
        position: fixed;
        bottom: 12px;
        right: 10px;
        font-size: 24px;
        padding: 5px 10px;
        background: transparent;
        color: white;
        border: none;
    }

    .chat-title {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        padding: 20px;
        background: #333;
        box-sizing: border-box;
        z-index: 2000;
    }

    .chat-messages {
        list-style: none;
        padding: 40px 40px 20px 0;
        display: inline-block;
        height: 78%;
        width: 100%;
        overflow: scroll;
        margin-top: 0;
        box-sizing: border-box

        li {
            margin-bottom: 30px;
            width: 100%;
            overflow: hidden;

            &:after {
                content: '';
                display: table;
                clear: both;
            }
        }

        .chat-avatar {
            color: white;
            background: #333;
            border-radius: 100%;
            width: 46px;
            height: 46px;
            display: inline-block;
            text-align: center;
            box-sizing: border-box;
            margin-right: 20px;
            float: left;
            overflow: hidden;

            img {
                width: 100%;
                height: 100%;
            }
        }

        .chat-user {
            font-size: 12px;
            margin-top: 0px;
            font-weight: bold;
            float: left;
        }
        .chat-message {
            margin-top: -30px;
            display: inline-block;
            float: left;
            clear: left;
            margin-left: 65px;
        }
    }
}

